[tool.poetry]
name = "get-data"
version = "0.1.0"
description = ""
authors = ["Alan <tyujn24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
selenium = "^4.20.0"
pandas = "^2.2.2"
fake-useragent = "^1.5.1"
undetected-chromedriver = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
